# app_rocket

./: .env  .gitignore  Cargo.toml  README.md  app-dev.yaml  app-stag.yaml  app.yaml  log4rs.yaml
src/: auth.rs  config.rs  lib.rs  main.rs  result.rs  schema.rs
src/database/: db_bak.rs  http_logs.rs  mod.rs  token_api_auth.rs  user.rs  user_token.rs
src/fairing/: api_token.rs  mod.rs  rsp_auth.rs
src/models/: auth.rs  http_logs.rs  logs.rs  mod.rs  open_api_doc.rs  response.rs  token_api_auth.rs  user.rs  user_token.rs  validation.rs
src/routes/: api_token_fairing.rs  asset.rs  auth_fairing.rs  demo_fairing.rs  errors.rs  log_fairing.rs  mod.rs  token_api_auth.rs  user.rs  user_token.rs
src/utils/: crypto_aes.rs  mod.rs
web/: package.json
web/src/utils/: aes.js
web/src/views/login/: Login.vue
