[package]
name = "app_rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
# rocket_cors = { version = "0.6.0-alpha1", default-features = false }
rust-embed = { version = "6.4.0", features = ["interpolate-folder-path", "compression"] }
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["mysql", "chrono"] }
r2d2-diesel = "1.0"
r2d2 = "0.8.9"
dotenv = "0.15.0"
validator = "0.14.0"
validator_derive = "0.14.0"
jsonwebtoken = "8.0.1"
