[package]
name = "app_rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
once_cell = "1.10.0"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
# rocket_cors = { version = "0.6.0-alpha1", default-features = false }
rust-embed = { version = "6.4.0", features = ["interpolate-folder-path", "compression"] }
chrono = { version = "0.4.19", features = ["serde"] }
r2d2-diesel = "1.0"
r2d2 = "0.8.9"
diesel = { version = "1.4.8", features = ["mysql", "chrono", "r2d2"] }
dotenv = "0.15.0"
validator = "0.14.0"
validator_derive = "0.14.0"
jsonwebtoken = "8.0.1"
rand = "0.8.5"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
base64 = "0.13.0"
log = "0.4.16"
log4rs = "1.0.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_mysql_pool"]
